# python-extensions

./: .gitignore  Dockerfile  LICENSE  README.md  compare.py  cython_setup.py  generate_input_data.py  impl_python.py  makefile  requirements.in  requirements.txt
impl_cython/: cython_python_ext.pyx
impl_go/: go.mod  go.sum  go_python_ext.go  go_python_ext_test.go
impl_nim/: nim.nimble
impl_nim/src/: nim_python_ext.nim
impl_nim/tests/: test0.nim
impl_rust/: Cargo.toml
impl_rust/src/: lib.rs
